adding y-axis dragging

--- a/demo/demo-android.html
+++ b/demo/demo-android.html
@@ -6,7 +6,7 @@
 
 <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="jquery/jquery.disableTextSelect.js"></script>
-<script type="text/javascript" src="../jquery.drag-n-snap-paginator.js"></script>
+<script type="text/javascript" src="../jquery.draggable-pagination.js"></script>
 
 <script type="text/javascript">
 $(function(){
@@ -95,7 +95,7 @@ html, body {
 		<div class="droid-row">
 			<div class="droid-row-item"></div>
 			<div class="droid-row-item">
-				<img class="droid-row-item-bar" src="assets/icon-xkcd.png" />
+				<!--<img class="droid-row-item-bar" src="assets/icon-xkcd.png" />-->
 			</div>
 			<div class="droid-row-item"></div>
 			<div class="droid-row-item"></div>
