--- a/demo/demo-table.html
+++ b/demo/demo-table.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="jquery/jquery-ui/jquery-ui-1.8.4.custom.min.js"></script>
 <link type="text/css" rel="stylesheet" href="jquery/jquery-ui/hot-sneaks/jquery-ui-1.8.5.custom.css">
 
-<script type="text/javascript" src="../jquery.drag-n-snap-paginator.js"></script>
+<script type="text/javascript" src="../jquery.draggable-pagination.js"></script>
 
 <style type="text/css">
 th, td {
