--- a/demo/index.html
+++ b/demo/index.html
@@ -45,16 +45,23 @@ $(function() {
 
 <div id="demos">
 	<ul>
-		<li><a href="#api">API Demo</a></li>
+        <li><a href="#api-x">API Demo (X axis)</a></li>
+        <li><a href="#api-y">API Demo (Y axis)</a></li>
 		<li><a href="#table">Table Demo</a></li>
 		<li><a id="android-tab" href="#android"><img src="assets/droid-head.png" /></a></li>
 	</ul>
-	<div id="api" class="demo api">
-		<p>The paginated widget has methods that can be used to create custom navigation.<br />
-		   The buttons below work by calling the widget's "goto", "next", "prev", "page", and "has" methods.  
-		</p>
-		<iframe src="demo-api.html" width="1000" height="600"></iframe>
-	</div>
+    <div id="api-x" class="demo api-x">
+        <p>The paginated widget has methods that can be used to create custom navigation.<br />
+            The buttons below work by calling the widget's "goto", "next", "prev", "page", and "has" methods.
+        </p>
+        <iframe src="demo-api.html" width="1000" height="600"></iframe>
+    </div>
+    <div id="api-y" class="demo api-y">
+        <p>The paginated widget has methods that can be used to create custom navigation.<br />
+            The buttons below work by calling the widget's "goto", "next", "prev", "page", and "has" methods.
+        </p>
+        <iframe src="demo-api-y.html" width="1000" height="600"></iframe>
+    </div>
 	<div id="table" class="demo table">
 		<p>Tables get special treatment to preserve columns and headers.<br />
 		   Push the "Paginate" button to activate the widget.
